/* 
  Localizable.strings
  SWAPI

  Created by Nilusha Niwanthaka Wimalasena on 8/9/25.
  
*/

/* Splash Screen */

"splash.title" = "Star Wars Planets";
"splash.subtitle" = "Explore the worlds of a galaxy far, far away";

/* Network / Connectivity */

"network.offline.title" = "You’re Offline";
"network.offline.message" = "Check your internet connection and try again.";
"network.banner.connected" = "Internet Connection Restored";
"network.banner.disconnected" = "No Internet Connection";

/* Planet List */

"planetlist.title" = "SWAPI";
"planetlist.search.placeholder" = "Search by planet name";
"planetlist.ok" = "OK";
"planetlist.error" = "Error";
"planetlist.unknownError" = "Unknown error";
"planetlist.item.name" = "Name";
"planetlist.item.climate" = "Climate";

/* Planet Detail */

"planetdetail.overview" = "Overview";
"planetdetail.physical" = "Physical Characteristics";
"planetdetail.metadata" = "Metadata";

"planetdetail.climate" = "Climate";
"planetdetail.gravity" = "Gravity";
"planetdetail.population" = "Population";

"planetdetail.rotationPeriod" = "Rotation Period";
"planetdetail.orbitalPeriod" = "Orbital Period";
"planetdetail.diameter" = "Diameter";
"planetdetail.surfaceWater" = "Surface Water";
"planetdetail.terrain" = "Terrain";

"planetdetail.created" = "Created";
"planetdetail.edited" = "Edited";

/* Side Menu */

"menu.settings" = "Settings";

/* Settings View */

"settings.title" = "Settings";
"settings.section.appearance" = "Appearance";
"settings.theme" = "App Theme";
"settings.theme.system" = "System";
"settings.theme.light" = "Light";
"settings.theme.dark" = "Dark";

"settings.section.about" = "About";
"settings.appVersion" = "App Version";
"settings.buildNumber" = "Build Number";
